# rdpms-core

./: .gitignore  AGENTS.md  README.md  swagger.yaml
rdpms-cli/: pyproject.toml
rdpms-cli/rdpms_cli/: __init__.py  example_config.yaml  main_cli.py
rdpms-cli/rdpms_cli/api_client/: README.md  pyproject.toml  setup.py
rdpms-cli/rdpms_cli/api_client/.openapi-generator/: FILES
rdpms-cli/rdpms_cli/api_client/docs/: CollectionSummaryDTO.md  CollectionsApi.md  ContentTypeDTO.md  ContentTypesApi.md  DataSetDetailedDTO.md  DataSetSummaryDTO.md  DataSetsApi.md  DataStoreSummaryDTO.md  ErrorMessageDTO.md  FileCreateResponseDTO.md  FileSummaryDTO.md  FilesApi.md  ProjectSummaryDTO.md  ProjectsApi.md  S3FileCreateRequestDTO.md  StoresApi.md  TagDTO.md
rdpms-cli/rdpms_cli/api_client/openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
rdpms-cli/rdpms_cli/api_client/test/: test_collection_summary_dto.py  test_collections_api.py  test_content_type_dto.py  test_content_types_api.py  test_data_set_detailed_dto.py  test_data_set_summary_dto.py  test_data_sets_api.py  test_data_store_summary_dto.py  test_error_message_dto.py  test_file_create_response_dto.py  test_file_summary_dto.py  test_files_api.py  test_problem_details.py  test_project_summary_dto.py  (+4 more)
rdpms-cli/rdpms_cli/commands/: collection.py  dataset.py  instance.py  metadata.py  pipeline.py  project.py
rdpms-cli/rdpms_cli/openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
rdpms-cli/rdpms_cli/util/: TypeStore.py  api_helper.py  config_store.py
(+618 files in other folders)
